<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".LoginActivity">

    <TextView android:text = "@string/tvHelloLogin" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/tvHelloLogin"
        android:textSize = "25sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/tvTitleLogin"
        android:id = "@+id/tvTitleLogin"
        android:layout_below = "@+id/tvHelloLogin"
        android:layout_centerHorizontal = "true"
        android:textColor = "#005281"
        android:textSize = "35sp" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/edtUserName"
        android:hint = "@string/edtUserNameHint"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#00b2ff"
        android:layout_marginTop = "46dp"
        android:layout_below = "@+id/imvLogoLogin"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imvLogoLogin"
        android:src="@drawable/logo"
        android:layout_below="@+id/tvTitleLogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:layout_below="@+id/edtUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtUserName"
        android:layout_alignEnd="@+id/edtUserName"
        android:textColorHint="#00b2ff"
        android:hint="@string/edtPasswordHint" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvTitleLogin"
        android:layout_alignEnd="@+id/tvTitleLogin"
        android:layout_alignLeft="@+id/tvTitleLogin"
        android:layout_alignStart="@+id/tvTitleLogin"
        android:onClick="logar"/>

    <CheckBox
        android:text="@string/cbKeepLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cbKeepLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin" />


</RelativeLayout>
